--- a/.github/workflows/docker-slim.yml
+++ b/.github/workflows/docker-slim.yml
@@ -14,9 +14,8 @@ jobs:
 
       - name: Install docker-slim
         run: |
-          curl -sL https://github.com/docker-slim/docker-slim/releases/download/v1.34.0/docker-slim-1.34.0-linux-amd64.tar.gz | tar -xz
-          sudo mv docker-slim-1.34.0-linux-amd64/docker-slim /usr/local/bin/
-          sudo chmod +x /usr/local/bin/docker-slim
+          curl -L -o ds.tar.gz https://github.com/slimtoolkit/slim/releases/download/1.40.11/dist_linux.tar.gz
+        
 
       - name: Login to GHCR
         uses: docker/login-action@v1
@@ -30,6 +29,6 @@ jobs:
           docker build -t mkdocs-image -f Dockerfile.mkdocs .
           docker tag mkdocs-image ghcr.io/${GITHUB_REPOSITORY}/mkdocs-image:latest
           docker push ghcr.io/${GITHUB_REPOSITORY}/mkdocs-image:latest
-
+          docker run -it --rm -v /var/run/docker.sock:/var/run/docker.sock dslim/slim build mkdocs-image
           docker-slim build --tag ghcr.io/${GITHUB_REPOSITORY}/slim-image:latest mkdocs-image
           docker push ghcr.io/${GITHUB_REPOSITORY}/slim-image:latest
