--- a/.github/workflows/docker-slim.yml
+++ b/.github/workflows/docker-slim.yml
@@ -12,23 +12,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install docker-slim
-        run: |
-          curl -L -o ds.tar.gz https://github.com/slimtoolkit/slim/releases/download/1.40.11/dist_linux.tar.gz
-        
-
       - name: Login to GHCR
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push the image
         run: |
           docker build -t mkdocs-image -f Dockerfile.mkdocs .
           docker tag mkdocs-image ghcr.io/${GITHUB_REPOSITORY}/mkdocs-image:latest
           docker push ghcr.io/${GITHUB_REPOSITORY}/mkdocs-image:latest
+
           docker run -it --rm -v /var/run/docker.sock:/var/run/docker.sock dslim/slim build mkdocs-image
-          docker-slim build --tag ghcr.io/${GITHUB_REPOSITORY}/slim-image:latest mkdocs-image
+          docker tag $(docker images -q --filter "reference=mkdocs-image-slim") ghcr.io/${GITHUB_REPOSITORY}/slim-image:latest
           docker push ghcr.io/${GITHUB_REPOSITORY}/slim-image:latest
