--- a/.github/workflows/docker-slim.yml
+++ b/.github/workflows/docker-slim.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push the image
         run: |
@@ -26,5 +26,5 @@ jobs:
           docker push ghcr.io/${GITHUB_REPOSITORY}/mkdocs-image:latest
 
           docker run -d --rm --tty=false -v /var/run/docker.sock:/var/run/docker.sock dslim/slim build mkdocs-image
-          docker tag $(docker images -q --filter "reference=mkdocs-image-slim") ghcr.io/${GITHUB_REPOSITORY}/slim-image:latest
+          docker tag mkdocs-image-slim ghcr.io/${GITHUB_REPOSITORY}/slim-image:latest
           docker push ghcr.io/${GITHUB_REPOSITORY}/slim-image:latest
