--- a/.github/workflows/docker-slim.yml
+++ b/.github/workflows/docker-slim.yml
@@ -21,10 +21,11 @@ jobs:
 
       - name: Build and push the image
         run: |
-          docker build -t mkdocs-image -f Dockerfile.mkdocs .
+          docker build -t mkdocs-image -f Dockerfile.mkdocs -t mkdocs-image
           docker tag mkdocs-image ghcr.io/${GITHUB_REPOSITORY}/mkdocs-image:latest
           docker push ghcr.io/${GITHUB_REPOSITORY}/mkdocs-image:latest
 
           docker run -d --rm --tty=false -v /var/run/docker.sock:/var/run/docker.sock dslim/slim build mkdocs-image
-          docker tag mkdocs-image-slim ghcr.io/${GITHUB_REPOSITORY}/slim-image:latest
+          SLIM_IMAGE_ID=$(docker images -q --filter "reference=mkdocs-image-slim")
+          docker tag $SLIM_IMAGE_ID ghcr.io/${GITHUB_REPOSITORY}/slim-image:latest
           docker push ghcr.io/${GITHUB_REPOSITORY}/slim-image:latest
